infrastructure/networking/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-io
spec:
  addresses:
  - type: IPAddress
    value: 10.10.10.15
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.moonsuit.org"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.moonsuit.org"
      tls:
        certificateRefs:
          - name: le-cert
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
